# askdocs

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  drizzle.config.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  vitest.config.ts
app/: layout.tsx  page.tsx
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: answer_cache.py  config.py  deps.py  grounding.py  main.py  schemas.py  store.py
backend/app/api/: ask.py  documents.py  health.py
backend/app/services/: chunking.py  documents.py  embedding.py  extraction.py  generation.py  retrieval.py  vectorstore.py
backend/tests/: conftest.py  test_answer_cache.py  test_api.py  test_chunking.py  test_extraction.py  test_retrieval.py
components/: app-shell.tsx
components/chat/: composer.tsx
components/ui/: icons.tsx
data/: askdocs.db
docs/: architecture.md  requirements.md  todo.md
drizzle/: 0000_goofy_orphan.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
lib/: config.ts  errors.ts  hash.ts  http.ts
lib/auth/: session.ts
lib/cache/: answer-cache.ts  embedding-cache.ts
lib/db/: client.ts  schema.ts
lib/documents/: service.ts
lib/rag/: chunking.ts  embedding.ts  extraction.ts  generation.ts  prompt.ts  retrieval.ts  vector.ts
lib/ratelimit/: limiter.ts
lib/shared/: api.ts
scripts/: migrate.ts  seed.ts
tests/api/: ask.test.ts  documents.test.ts  health.test.ts
tests/helpers/: test-db.ts
web/: Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
web/app/: globals.css  (+1 more)
(+26 files in other folders)
