[project]
name = "askdocs-backend"
version = "0.1.0"
description = "AskDocs RAG backend — FastAPI + Google Gemini + Qdrant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.20",
    "google-genai>=1.16",
    "qdrant-client>=1.12",
    "pypdf>=5.1",
    "python-docx>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
